--- a/markup/forms/index.html
+++ b/markup/forms/index.html
@@ -68,7 +68,7 @@
                   <li class="tab col-sm-3"><a href="#form1" class="valign-wrapper"><span class="valign center">Поиск туров</span></a></li>
                   <li class="tab col-sm-3"><a href="#form2" class="valign-wrapper"><span class="valign center">Поиск авиабилетов</span></a></li>
                   <li class="tab col-sm-3 disabled"><a href="#form3" class="valign-wrapper"><span class="valign center">Поиск отелей</span></a></li>
-                  <li class="tab col-sm-3"><a href="#form4" class="valign-wrapper"><span class="valign center">Бронирование автомобилей</span></a></li>
+                  <li class="tab col-sm-3"><a href="#form-menu" class="valign-wrapper modal-trigger"><span class="valign b-forms-menu"></span></a></li>
                 </ul>
               </nav>
             </div>
@@ -82,7 +82,13 @@
               <div style="width: 500px; background-color: violet;">form3</div>
             </div>
             <div id="form4" class="col-sm-12 b-forms__tab">
-              <div style="width: 600px; background-color: lightblue;">form4</div>
+              <div style="width: 300px; background-color: lightblue;">form4</div>
+            </div>
+            <div id="form9" class="col-sm-12 b-forms__tab">
+              <div style="width: 200px; background-color: pink;">form9</div>
+            </div>
+            <div id="form10" class="col-sm-12 b-forms__tab">
+              <div style="width: 600px; background-color: orange;">form10</div>
             </div>
           </div>
         </div>
@@ -94,7 +100,11 @@
                   <li class="tab col-sm-3"><a href="#form5" title="Поиск туров" class="i-tours"></a></li>
                   <li class="tab col-sm-3"><a href="#form6" title="Поиск авиабилетов" class="i-avia"></a></li>
                   <li class="tab col-sm-3 disabled"><a href="#form7" title="Поиск отелей" class="i-hotels"></a></li>
-                  <li class="tab col-sm-3"><a href="#form8" titile="Бронирование автомобилей" class="i-cars"></a></li>
+                  <li class="tab col-sm-3"><a href="#form-menu" class="valign-wrapper modal-trigger"><span class="valign b-forms-menu"></span></a></li>
+                  <!--li.tab.col-sm-3
+                  a( href="#form8" titile="Бронирование автомобилей" ).i-cars
+                  
+                  -->
                 </ul>
               </nav>
             </div>
@@ -110,6 +120,40 @@
             <div id="form8" class="col-sm-12 b-forms__tab">
               <div style="width: 200px; background-color: lightblue;"><script charset="utf-8" src="//www.travelpayouts.com/widgets/2e904aed9b11dc04a26ae5f66e4a9820.js?v=767" async></script></div>
             </div>
+            <div id="form11" class="col-sm-12 b-forms__tab">
+              <div style="width: 100px; background-color: lightgreen;"><script charset="utf-8" src="//www.travelpayouts.com/widgets/2e904aed9b11dc04a26ae5f66e4a9820.js?v=767" async></script></div>
+            </div>
+            <div id="form12" class="col-sm-12 b-forms__tab">
+              <div style="width: 500px; background-color: violet;"><script charset="utf-8" src="//www.travelpayouts.com/widgets/2e904aed9b11dc04a26ae5f66e4a9820.js?v=767" async></script></div>
+            </div>
+          </div>
+        </div>
+        <div id="form-menu" class="modal bottom-sheet">
+          <div class="modal-content">  
+            <nav>
+              <ul class="tabs">
+                <div class="hidden-xs">
+                  <li class="tab"><a href="#form4" class="valign-wrapper modal-action modal-close"><span class="valign center">Бронирование автомобилей</span></a></li>
+                  <li class="tab"><a href="#form9" class="valign-wrapper modal-action modal-close"><span class="valign center">Поиск круизов</span></a></li>
+                  <li class="tab"><a href="#form10" class="valign-wrapper modal-action modal-close"><span class="valign center">Поиск горящих путевок</span></a></li>
+                  <li class="tab"><a href="#form4" class="valign-wrapper modal-action modal-close"><span class="valign center">Бронирование автомобилей</span></a></li>
+                  <li class="tab"><a href="#form9" class="valign-wrapper modal-action modal-close"><span class="valign center">Бронирование автомобилей</span></a></li>
+                  <li class="tab"><a href="#form10" class="valign-wrapper modal-action modal-close"><span class="valign center">Поиск круизов</span></a></li>
+                  <li class="tab"><a href="#form4" class="valign-wrapper modal-action modal-close"><span class="valign center">Поиск горящих путевок</span></a></li>
+                  <li class="tab"><a href="#form9" class="valign-wrapper modal-action modal-close"><span class="valign center">Бронирование автомобилей</span></a></li>
+                </div>
+                <div class="visible-xs-block">
+                  <li class="tab"><a href="#form8" class="valign-wrapper modal-action modal-close"><span class="valign center">Бронирование автомобилей</span></a></li>
+                  <li class="tab"><a href="#form11" class="valign-wrapper modal-action modal-close"><span class="valign center">Поиск круизов</span></a></li>
+                  <li class="tab"><a href="#form12" class="valign-wrapper modal-action modal-close"><span class="valign center">Поиск горящих путевок</span></a></li>
+                  <li class="tab"><a href="#form8" class="valign-wrapper modal-action modal-close"><span class="valign center">Бронирование автомобилей</span></a></li>
+                  <li class="tab"><a href="#form11" class="valign-wrapper modal-action modal-close"><span class="valign center">Бронирование автомобилей</span></a></li>
+                  <li class="tab"><a href="#form12" class="valign-wrapper modal-action modal-close"><span class="valign center">Поиск круизов</span></a></li>
+                  <li class="tab"><a href="#form8" class="valign-wrapper modal-action modal-close"><span class="valign center">Поиск горящих путевок</span></a></li>
+                  <li class="tab"><a href="#form11" class="valign-wrapper modal-action modal-close"><span class="valign center">Бронирование автомобилей</span></a></li>
+                </div>
+              </ul>
+            </nav>
           </div>
         </div>
       </div>
