--- a/markup/index.html
+++ b/markup/index.html
@@ -130,7 +130,7 @@
         </div>
       </div>
       <!-- end /components/banner.12/-->
-      <hr class="i-unstyled i-size-S">
+      <hr class="i-unstyled">
       <!-- start /components/forms/-->
       <link rel="stylesheet" href="/components/forms/style.css">
       <script src="/components/forms/script.js"></script>
@@ -143,7 +143,7 @@
                   <li class="tab col-sm-3"><a href="#form1" class="valign-wrapper"><span class="valign center">Поиск туров</span></a></li>
                   <li class="tab col-sm-3"><a href="#form2" class="valign-wrapper"><span class="valign center">Поиск авиабилетов</span></a></li>
                   <li class="tab col-sm-3 disabled"><a href="#form3" class="valign-wrapper"><span class="valign center">Поиск отелей</span></a></li>
-                  <li class="tab col-sm-3"><a href="#form4" class="valign-wrapper"><span class="valign center">Бронирование автомобилей</span></a></li>
+                  <li class="tab col-sm-3"><a href="#form-menu" class="valign-wrapper modal-trigger"><span class="valign b-forms-menu"></span></a></li>
                 </ul>
               </nav>
             </div>
@@ -157,7 +157,13 @@
               <div style="width: 500px; background-color: violet;">form3</div>
             </div>
             <div id="form4" class="col-sm-12 b-forms__tab">
-              <div style="width: 600px; background-color: lightblue;">form4</div>
+              <div style="width: 300px; background-color: lightblue;">form4</div>
+            </div>
+            <div id="form9" class="col-sm-12 b-forms__tab">
+              <div style="width: 200px; background-color: pink;">form9</div>
+            </div>
+            <div id="form10" class="col-sm-12 b-forms__tab">
+              <div style="width: 600px; background-color: orange;">form10</div>
             </div>
           </div>
         </div>
@@ -169,7 +175,11 @@
                   <li class="tab col-sm-3"><a href="#form5" title="Поиск туров" class="i-tours"></a></li>
                   <li class="tab col-sm-3"><a href="#form6" title="Поиск авиабилетов" class="i-avia"></a></li>
                   <li class="tab col-sm-3 disabled"><a href="#form7" title="Поиск отелей" class="i-hotels"></a></li>
-                  <li class="tab col-sm-3"><a href="#form8" titile="Бронирование автомобилей" class="i-cars"></a></li>
+                  <li class="tab col-sm-3"><a href="#form-menu" class="valign-wrapper modal-trigger"><span class="valign b-forms-menu"></span></a></li>
+                  <!--li.tab.col-sm-3
+                  a( href="#form8" titile="Бронирование автомобилей" ).i-cars
+                  
+                  -->
                 </ul>
               </nav>
             </div>
@@ -185,6 +195,40 @@
             <div id="form8" class="col-sm-12 b-forms__tab">
               <div style="width: 200px; background-color: lightblue;"><script charset="utf-8" src="//www.travelpayouts.com/widgets/2e904aed9b11dc04a26ae5f66e4a9820.js?v=767" async></script></div>
             </div>
+            <div id="form11" class="col-sm-12 b-forms__tab">
+              <div style="width: 100px; background-color: lightgreen;"><script charset="utf-8" src="//www.travelpayouts.com/widgets/2e904aed9b11dc04a26ae5f66e4a9820.js?v=767" async></script></div>
+            </div>
+            <div id="form12" class="col-sm-12 b-forms__tab">
+              <div style="width: 500px; background-color: violet;"><script charset="utf-8" src="//www.travelpayouts.com/widgets/2e904aed9b11dc04a26ae5f66e4a9820.js?v=767" async></script></div>
+            </div>
+          </div>
+        </div>
+        <div id="form-menu" class="modal bottom-sheet">
+          <div class="modal-content">  
+            <nav>
+              <ul class="tabs">
+                <div class="hidden-xs">
+                  <li class="tab"><a href="#form4" class="valign-wrapper modal-action modal-close"><span class="valign center">Бронирование автомобилей</span></a></li>
+                  <li class="tab"><a href="#form9" class="valign-wrapper modal-action modal-close"><span class="valign center">Поиск круизов</span></a></li>
+                  <li class="tab"><a href="#form10" class="valign-wrapper modal-action modal-close"><span class="valign center">Поиск горящих путевок</span></a></li>
+                  <li class="tab"><a href="#form4" class="valign-wrapper modal-action modal-close"><span class="valign center">Бронирование автомобилей</span></a></li>
+                  <li class="tab"><a href="#form9" class="valign-wrapper modal-action modal-close"><span class="valign center">Бронирование автомобилей</span></a></li>
+                  <li class="tab"><a href="#form10" class="valign-wrapper modal-action modal-close"><span class="valign center">Поиск круизов</span></a></li>
+                  <li class="tab"><a href="#form4" class="valign-wrapper modal-action modal-close"><span class="valign center">Поиск горящих путевок</span></a></li>
+                  <li class="tab"><a href="#form9" class="valign-wrapper modal-action modal-close"><span class="valign center">Бронирование автомобилей</span></a></li>
+                </div>
+                <div class="visible-xs-block">
+                  <li class="tab"><a href="#form8" class="valign-wrapper modal-action modal-close"><span class="valign center">Бронирование автомобилей</span></a></li>
+                  <li class="tab"><a href="#form11" class="valign-wrapper modal-action modal-close"><span class="valign center">Поиск круизов</span></a></li>
+                  <li class="tab"><a href="#form12" class="valign-wrapper modal-action modal-close"><span class="valign center">Поиск горящих путевок</span></a></li>
+                  <li class="tab"><a href="#form8" class="valign-wrapper modal-action modal-close"><span class="valign center">Бронирование автомобилей</span></a></li>
+                  <li class="tab"><a href="#form11" class="valign-wrapper modal-action modal-close"><span class="valign center">Бронирование автомобилей</span></a></li>
+                  <li class="tab"><a href="#form12" class="valign-wrapper modal-action modal-close"><span class="valign center">Поиск круизов</span></a></li>
+                  <li class="tab"><a href="#form8" class="valign-wrapper modal-action modal-close"><span class="valign center">Поиск горящих путевок</span></a></li>
+                  <li class="tab"><a href="#form11" class="valign-wrapper modal-action modal-close"><span class="valign center">Бронирование автомобилей</span></a></li>
+                </div>
+              </ul>
+            </nav>
           </div>
         </div>
       </div>
@@ -195,7 +239,7 @@
           <h1>Travellers — универсальное туристкое агентство</h1>
           <p>Мы рады приветствовать вас на сайте туристической компании Travellers, мы бережно относимся к вашему времени и комфорту, поэтому наш сайт максимально прост и удобен в использование. </p>
           <p>Вы готовы выбрать собственный отдых, тогда обратите внимание на преимущества,к оторыми вы сможете воспользваться, обратившись к нам.</p>
-          <hr>
+          <hr class="i-size-XL">
           <div class="row">
             <div class="col-sm-6 center"><img src="/upload/about1.png" alt="" class="img-responsive"></div>
             <div class="col-sm-6">
