--- a/markup/about/index.html
+++ b/markup/about/index.html
@@ -67,6 +67,29 @@
       <div class="row">
         <div class="col-sm-8 col-sm-offset-2">
           <div class="row">
+            <div class="col-sm-6">
+              <h2>Адрес</h2>
+              <p>117036, Москва,<br>ул. Тверская, 356, <br>офис 110</p>
+            </div>
+            <hr class="visible-xs-block i-unstyled">
+            <div class="col-sm-6">
+              <h2>Контакты</h2>
+              <p>+ 8 888 88 88 (для Москвичей)<br>+ 7 777 77 77 (для всей России)</p>
+              <p><a href="mailto:info@traveller.ru">info@traveller.ru</a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <hr class="i-size-L i-unstyled">
+      <div class="row i-unstyled">
+        <div class="col-sm-8 col-sm-offset-2">
+          <h2>Схема проезда</h2>
+        </div>
+      </div><script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=rYtreBV2jTaOQeVm7STmHfRBhKkqWFKZ&width=100%&height=400&lang=ru_RU&sourceType=constructor&scroll=true"></script>
+      <hr class="i-size-L i-unstyled">
+      <div class="row">
+        <div class="col-sm-8 col-sm-offset-2">
+          <div class="row">
             <div class="col-sm-6 center"><img src="/upload/about1.png" alt="" class="img-responsive"></div>
             <div class="col-sm-6">
               <h2>Широчайший выбор стран</h2>
