--- a/markup/about/index.html
+++ b/markup/about/index.html
@@ -85,7 +85,7 @@
         <div class="col-sm-8 col-sm-offset-2">
           <h2>Схема проезда</h2>
         </div>
-      </div><script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=rYtreBV2jTaOQeVm7STmHfRBhKkqWFKZ&width=100%&height=400&lang=ru_RU&sourceType=constructor&scroll=true"></script>
+      </div><script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=rYtreBV2jTaOQeVm7STmHfRBhKkqWFKZ&width=100%&height=400&lang=ru_RU&sourceType=constructor&scroll=false"></script>
       <hr class="i-size-L i-unstyled">
       <div class="row">
         <div class="col-sm-8 col-sm-offset-2">
