--- a/markup/index.html
+++ b/markup/index.html
@@ -60,10 +60,9 @@
     <link href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet">
     <script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script>
     <div class="b-impression-block">
-      <div data-width="100%" data-height="647" data-transition="crossfade" data-loop="true" data-swipe="true" data-arrows="true" class="fotorama">
+      <div data-width="100%" data-height="647" data-transition="crossfade" data-loop="true" data-swipe="true" data-autoplay="2000" class="fotorama">
         <div style="background-image: url(/components/gallery-banner/preloader.svg)" class="b-impression-block__frame">
-          <div class="b-impression-block__container">
-            <div data-image="http://s.fotorama.io/1.jpg" class="b-impression-block__image"></div>
+          <div class="b-impression-block__container"><a href="" data-image="http://s.fotorama.io/1.jpg" class="b-impression-block__image"></a>
             <div class="container">
               <h2 class="b-h1">Хевиз</h2>
               <p>Хевиз – известный венгерский курорт, популярность которому обеспечило самое крупное целебное     термальное озеро, которое стремятся посетить гости из Европы и России.<br><b class="b-impression-block__price">от 480 €</b></p>
